--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "first draft on guestbook",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha './*.test.js' ",
     "lint": "eslint .",
     "start": "nodemon index.js"
+  },
+  "mocha": {
+    "watch": "true"
   },
   "repository": {
     "type": "git",
@@ -21,10 +24,13 @@
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "mocha": "^9.0.3",
     "nodemon": "^2.0.7",
     "request-ip": "^2.1.3"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "eslint": "^7.29.0",
     "eslint-plugin-react": "^7.24.0"
   },
